--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Node server for multiple applications",
   "main": "server.js",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1"
   },
   "devDependencies": {},
