--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A Node server for multiple applications",
   "main": "server.js",
   "dependencies": {
+    "crypto": "^1.0.1",
     "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "qrcode-generator": "^1.4.4"
   },
   "devDependencies": {},
   "scripts": {
